--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="bg-white shadow-xl flex flex-col items-center justify-center rounded-xl">
           <div class="text-2xl font-bold text-blue-800 pt-12">Under Contruction</div>
           <div class="w-280 md:w-640">
-            <img class="inline-block object-cover w-full h-full" src="img/under-construction.png" alt />
+            <img class="inline-block object-cover w-full h-full" src="under-construction.png" alt />
           </div>
         </div>
       </div>
@@ -250,7 +250,7 @@
                 </div>
               </div>
             </div>
-            <img src="img/banner-welcome.png" alt="" class="w-full md:w-1/2" />
+            <img src="banner-welcome.png" alt="" class="w-full md:w-1/2" />
           </div>
 
           <div class="mb-28 bg-blue-50 py-12 flex flex-col space-y-12">
