--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
     -->
         <div class="guest-menu-mobile lg:hidden flex-col" :class="openMenu ? 'hidden' : 'flex'">
           <div class="px-2 pt-2 pb-3 flex flex-col space-y-1">
-            <router-link to="/" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">{{ getWordInLanguage("guestMenu.Home") }}</router-link>
-            <router-link to="/about" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">{{ getWordInLanguage("guestMenu.AboutUs") }}</router-link>
-            <router-link to="/how-it-works" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">{{ getWordInLanguage("guestMenu.HowItWorkds") }}</router-link>
-            <router-link to="/pricing" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">{{ getWordInLanguage("guestMenu.Pricing") }}</router-link>
+            <router-link to="/" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">Home</router-link>
+            <router-link to="/about" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">About Us</router-link>
+            <router-link to="/how-it-works" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">How it Works</router-link>
+            <router-link to="/pricing" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">Pricing</router-link>
           </div>
           <div class="px-2 pt-2 pb-3 flex flex-col space-y-1 border-t border-white border-opacity-25">
-            <router-link to="/login" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">{{ getWordInLanguage("guestMenu.Login") }}</router-link>
-            <router-link to="/register" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">{{ getWordInLanguage("guestMenu.Register") }}</router-link>
+            <router-link to="/login" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">Login</router-link>
+            <router-link to="/register" class="font-semibold text-sm p-3 leading-5 text-white rounded hover:rounded-md bg-transparent hover:bg-blue-900 focus:outline-none flex transition duration-200 ease-in-out">Register</router-link>
           </div>
         </div>
       </nav>
